--- a/src/style.css
+++ b/src/style.css
@@ -258,6 +258,7 @@ body {
   position: relative;
 }
 
+/* -----------el boton no me funciona :( asi que no se muestra jeje
 .formulario-tarjeta select {
   -webkit-appearance: none;
 }
@@ -272,4 +273,18 @@ body {
 
 .formulario-tarjeta .grupo-select:hover i {
   color: #93bfed;
+} -----------*/
+
+.formulario-tarjeta .btn-enviar {
+  border: none;
+  padding: 10px;
+  font-size: 22px;
+  color: #fff;
+  background: #2364d2;
+  box-shadow: 2px 2px 10px 0px rgba(0,85,212,0.4);
+  cursor: pointer;
+}
+
+.formulario-tarjeta .btn-enviar:hover {
+  background: #1850b1;
 }
