--- a/src/style.css
+++ b/src/style.css
@@ -27,13 +27,14 @@ body {
   transition: .3s ease all;
   transform: rotateY(0deg);
   transform-style: preserve-3d;
-  backface-visibility: hidden;
+  /* ---backface-visibility: hidden;---*/
   cursor: pointer;
   z-index: 2;
 }
 
 .tarjeta.active {
   transform: rotateY(180deg);
+  cursor: pointer;
 }
 
 .tarjeta > div {
@@ -50,7 +51,8 @@ body {
 .tarjeta .delantera {
   width: 100%;
   background: url(img/bg-tarjeta/bg-tarjeta-02.jpg);
-  background-size: cover
+  background-size: cover;
+  backface-visibility: hidden;
 }
 
 .delantera .logo-marca {
