--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #ddeefc;
+  background: #9FDA9B;
   font-family: 'Lato', sans-serif;
 }
 
@@ -18,6 +18,20 @@ body {
   flex-direction:  column;
   align-items: center;
 }
+
+.bienvenida {
+  width: 100%;
+  max-width: 1000px;
+  padding: 30px;
+  border-radius: 15px;
+  color: white;
+  text-shadow: black 0.1em 0.1em 0.2em;
+  font-size: 22px;
+  text-align: center;
+
+
+  }
+
 /* -----estilos generales de la tarjeta ----*/
 .tarjeta {
   width: 100%;
@@ -200,7 +214,9 @@ body {
   position: relative;
   top: -150px;
   z-index: 1;
-  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  /* -----------formulario cerrado xxx
+
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);-----------*/
   transition: clip-path .3s ease-out;
 }
 .formulario-tarjeta.active {
@@ -278,7 +294,7 @@ body {
   color: #93bfed;
 } -----------*/
 
-.formulario-tarjeta .btn-enviar {
+.btn-enviar {
   border: none;
   padding: 10px;
   font-size: 22px;
@@ -288,6 +304,6 @@ body {
   cursor: pointer;
 }
 
-.formulario-tarjeta .btn-enviar:hover {
+.btn-enviar:hover {
   background: #1850b1;
 }
