--- a/src/style.css
+++ b/src/style.css
@@ -178,7 +178,7 @@ body {
   color: #fff;
 }
 
-.contenedor-btn .btn-abrir-formulario {
+/* ----no se usa  .contenedor-btn .btn-abrir-formulario {
   width: 50px;
   height: 50px;
   font-size: 20px;
@@ -202,7 +202,7 @@ body {
 
 .contenedor-btn .btn-abrir-formulario.active {
   transform: rotate(45deg);
-}
+} --------*/
 
 /* -----------Formulario de tarjeta -----------*/
 .formulario-tarjeta {
