--- a/src/style.css
+++ b/src/style.css
@@ -5,307 +5,187 @@
 }
 
 body {
-  background: #9FDA9B;
-  font-family: 'Lato', sans-serif;
+  background: #1f1f1f;
+  font-family: sans-serif;
+  max-width: 100vw;
+  min-height: 100vh;
 }
-
-.contenedor {
-  width: 90%;
-  max-width: 1000px;
-  padding: 40px 20px;
-  margin: auto;
-  display: flex;
-  flex-direction:  column;
-  align-items: center;
-}
-
-.bienvenida {
-  width: 90%;
-  max-width: 1000px;
-  padding: 30px;
-  border-radius: 15px;
-  color: white;
-  text-shadow: black 0.1em 0.1em 0.2em;
-  font-size: 22px;
+header{
   text-align: center;
+}
 
-
-  }
-
-/* -----estilos generales de la tarjeta ----*/
-.tarjeta {
+/* primera pantalla */
+#screen-one {
+  display: flex;
   width: 100%;
-  max-width: 550px;
-  position: relative;
-  color: #fff;
-  transition: .3s ease all;
-  transform: rotateY(0deg);
-  transform-style: preserve-3d;
-  /* ---backface-visibility: hidden;---*/
-  cursor: pointer;
-  z-index: 2;
+  height: 90vh;
+  background-image: url('https://media.graphassets.com/no_metadata/auto_image/quality=v:80/compress/cache=e:max/6pz9uvpMS0iS0MIrnxJd');
+  background-size: cover;
+  align-items: center;
+  text-shadow: black 0.1em 0.1em 0.2em
 }
-
-.tarjeta.active {
-  transform: rotateY(180deg);
-  cursor: pointer;
+.welcome-content{
+  margin: 0px 0px 0px 100px;
 }
-
-.tarjeta > div {
-  padding: 30px;
-  border-radius: 15px;
-  min-height: 315px;
+.welcome-content h3{
+  font-size: 2cm;
+  color: #f6f6f6;
+}
+.welcome-content .p1{
+  font-size: 1.5cm;
+  color: #f6f6f6;
+}
+.welcome-content form{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  box-shadow: 0 10px 10px 0 rgba(90,116,148,0.3);
+  align-items: center;
 }
-
-/* -----------Tarjeta Delantera -----------*/
-.tarjeta .delantera {
-  width: 100%;
-  background: url(img/bg-tarjeta/poker.jpg);
-  background-size: cover;
-  backface-visibility: hidden;
-}
-
-.delantera .logo-marca {
-  text-align: right;
-  min-height: 50px;
-}
-
-.delantera .logo-marca img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  max-width: 80px;
-}
-
-.delantera .chip {
-  width: 100%;
-  max-width: 50px;
-  margin-bottom: 20px;
-}
-
-.delantera .grupo .label {
-  font-size: 16px;
-  color: black;
-  margin-bottom: 5px;
-}
-
-.delantera .grupo .numero,
-.delantera .grupo .nombre,
-.delantera .grupo .expiracion {
-  color: white;
-  text-shadow: black 0.1em 0.1em 0.2em;
-  font-size: 22px;
-  text-transform: uppercase;
-}
-
-.delantera .flexbox {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px
-}
-
-/* -----------Tarjeta trasera -----------*/
-.trasera {
-  background: url(img/bg-tarjeta/poker.jpg);
-  background-size: cover;
-  /*--si quiero que se muestre la tarjeta trasera oculto esto--*/
-  position: absolute;
-  top: 0;
-  transform: rotateY(180deg);
-  backface-visibility: hidden;
-}
-
-.trasera .barra-magnetica {
-  height: 40px;
-  background: #000;
-  width: 100%;
-  position: absolute;
-  top: 30px;
-  left: 0
-}
-
-.trasera .datos {
-  margin-top: 60px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.trasera .datos p {
-  margin-bottom: 5px;
-}
-
-.trasera .datos #firma {
-  width: 70%
-}
-
-.trasera .datos #firma .firma {
-  height: 40px;
-  background: repeating-linear-gradient(skyblue 0, skyblue 5px, orange 5px, orange 10px);
-}
-
-.trasera .datos #firma .firma p {
-  line-height: 40px;
-  font-family: 'Liu Jian Mao Cao', cursive;
-  color: #000;
-  font-size: 30px;
-  padding: 0 10px;
-  text-transform: capitalize;
-}
-
-.trasera .datos #ccv {
-  width: 20%
-}
-
-.trasera .datos #ccv .ccv{
-  background: #fff;
-  height: 40px;
-  color: #000;
-  padding: 10px;
-  text-align: center;
-}
-
-.trasera .leyenda {
-  font-size: 14px;
-  line-height: 24px;
-}
-
-.trasera .link-banco {
-  font-size: 14px;
-  color: #fff;
-}
-
-/* ----no se usa  .contenedor-btn .btn-abrir-formulario {
-  width: 50px;
-  height: 50px;
-  font-size: 20px;
-  line-height: 20px;
-  background: #005eff;
-  color: #fff;
-  position: relative;
-  top: -25px;
-  z-index: 3;
-  border-radius: 100%;
-  box-shadow: -5px 4px 8px rgba(24,56,182,0.4);
-  padding: 5px;
-  transition: all .2s ease;
-  border: none;
-  cursor: pointer;
-}
-
-.contenedor-btn .btn-abrir-formulario:hover {
-  background: #1850b1
-}
-
-.contenedor-btn .btn-abrir-formulario.active {
-  transform: rotate(45deg);
-} --------*/
-
-/* -----------Formulario de tarjeta -----------*/
-.formulario-tarjeta {
-  background: #fff;
-  width: 100%;
-  max-width: 700px;
-  padding: 180px 30px 30px 30px;
-  border-radius: 10px;
-  position: relative;
-  top: -150px;
-  z-index: 1;
-  /* -----------formulario cerrado xxx
-
-  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);-----------*/
-  transition: clip-path .3s ease-out;
-}
-
-
-.formulario-tarjeta.active {
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-}
-
-.formulario-tarjeta label{
-  display: block;
-  color: #7d8994;
-  margin-bottom: 5px;
-  font-size: 16px;
-}
-
-.formulario-tarjeta input,
-.formulario-tarjeta select,
-.btn-enviar {
-  border: 2px solid #CED6E0;
+input[type=date] {
+  height: 35px;
+  margin: 0 auto;
+  width: 60%;
+  font-family: arial, sans-serif;
   font-size: 18px;
-  height: 50px;
-  width: 100%;
-  padding: 5px 12px;
-  transition: .3s ease all;
-  border-radius: 5px;
-}
-
-.formulario-tarjeta input:hover,
-.formulario-tarjeta select:hover {
-  border: 2px solid #93BDED;
-}
-
-.formulario-tarjeta input:focus,
-.formulario-tarjeta select:focus {
-  outline: rgb(4,4,4);
-  box-shadow: 1px 7px 10px -5px rgba(90,116,148,0.3);
-}
-
-.formulario-tarjeta input {
-  margin-bottom: 20px;
   text-transform: uppercase;
+  background-color: #959595;
+  outline: none;
+  border: 0;
+  border-radius: 5px;
+  padding: 0 3px;
+  color: #f6f6f6;
+  margin: 10px 0px 10px 0px;
+}
+.welcome-content form button{
+  width: 250px;
+  height: 50px;
+  background-color:  #e71d1e ;
+  border-radius: 5px;
+  border: none;
+  color: #f6f6f6;
+  font-weight: bold;
+  font-size: 20px;
+  margin:10px 0px 20px 0px;
+  text-shadow: black 0.1em 0.1em 0.2em
+}
+.welcome-content .p2{
+  font-size: 0.4cm;
+  color: #f6f6f6;
 }
 
-.formulario-tarjeta .flexbox {
+/* SEGUNDA PANTALLA */
+#screen-two{
+  display: flex;
+  width: 100%;
+  min-height: 90vh;
+  background-image: url('https://media.graphassets.com/no_metadata/auto_image/quality=v:80/compress/cache=e:max/Vu8dMy7zQbevYMyU1LGJ');
+  background-size: cover;
+  background-position: -1px ;
+  justify-content: center;
+}
+.content{
+  width: 800px;
+  background-color: #f6f6f6;
+  margin: 30px 0 30px 0;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.tarjeta{
+  width: 500px;
+  height: 280px;
+  background: url(img/bg-tarjeta/poker.jpg);
+  background-size: cover;
+  margin: 20px 0 10px 0;
+  border-radius: 15px;
+  padding: 10px;
+  z-index: 1;
+}
+.div-logo{
+  margin: 5px 20px 0 0;
+  text-align: end;
+}
+.logo-img{
+  width: 100px;
+}
+.div-chip{
+  text-align: start;
+  margin: 0 0 10px 30px;
+}
+.chip{
+  width: 50px;
+  height: 40px;
+}
+.numero-grupo{
+  display: flex;
+  align-content: flex-end;
+  text-align: start;
+  margin: 20px 0 10px 30px;
+}
+.datos-grupo{
   display: flex;
   justify-content: space-between;
+  text-align: start;
+  margin: 0 40px 10px 30px;
+}
+.label{
+  color:#f6f6f6;
+  font-size: 15px;
+}
+.numero,
+.nombre,
+.expiracion{
+  color:#f6f6f6;
+  font-size: 20px;
+  text-shadow: black 0.1em 0.1em 0.2em;
 }
 
-.formulario-tarjeta .expira {
-  width: 100%
+/* FORMULARIO DE TARJETA */
+.form-tarjeta{
+  background-color: #DCDCDC;
+  width: 600px;
+  margin: -40px 0 20px 0;
+  z-index: 0;
+  border-radius: 10px;
+  padding: 30px;
 }
-
-.formulario-tarjeta .ccv {
-  min-width: 100px;
+.form-tarjeta label{
+  color:#606060;
+  font-size: 14px;
 }
-
-.formulario-tarjeta .grupo-select {
-  width: 100%;
-  margin-right: 15px;
-  position: relative;
+.form-nombre,
+.form-numero,
+.form-expiracion{
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  height: 65px;
 }
-
-/* -----------el boton no me funciona :( asi que no se muestra jeje
-.formulario-tarjeta select {
-  -webkit-appearance: none;
+.form-nombre{
+  margin-top: 30px;
 }
-
-.formulario-tarjeta .grupo-select i {
-  position: absolute;
-  color: #CED6E0;
-  top: 18px;
-  right: 15px;
-  transition: .3s ease all;
-}
-
-.formulario-tarjeta .grupo-select:hover i {
-  color: #93bfed;
-} -----------*/
-
-.btn-enviar {
+.form-tarjeta input,
+.form-tarjeta select{
+  height: 30px;
+  border-radius: 5px;
   border: none;
-  padding: 10px;
-  font-size: 22px;
-  color: #fff;
-  background: #2364d2;
-  box-shadow: 2px 2px 10px 0px rgba(0,85,212,0.4);
-  cursor: pointer;
+  margin: 3px 0 3px 0;
+  padding: 5px;
 }
-
-.btn-enviar:hover {
-  background: #1850b1;
+.btn-enviar{
+  width: 250px;
+  height: 50px;
+  background-color:  #e71d1e ;
+  border-radius: 10px;
+  border: none;
+  color: #f6f6f6;
+  font-weight: bold;
+  font-size: 20px;
+  text-shadow: black 0.1em 0.1em 0.2em;
+  margin: 10px 0 10px 0;
+}
+.expiracion-select select{
+  width: 267px;
 }
